# fd_ed25519

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  wrapper.h
benches/: bench_sigverify.rs
examples/: Cargo.toml  sigverify.rs
src/: lib.rs
