[package]
name = "fd_ed25519"
version = "0.1.0"
edition = "2021"

[lib]
name = "fd_ed25519"
path = "src/lib.rs"

[dependencies]

[build-dependencies]
bindgen = "0.71"
cc = "1"

[dev-dependencies]
criterion = "0.5"
base64 = "0.22"
bincode = "1.3.3"
hex-literal = "0.4"
rand = "0.8"
solana-sdk = "2"

[[bench]]
name = "bench_sigverify"
path = "benches/bench_sigverify.rs"
harness = false
